crates/ringkernel-derive/tests/compile_fail/persistent_message_on_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/compile_fail/persistent_message_on_enum.rs:4:10
  |
4 | #[derive(RingMessage, PersistentMessage, Clone, Copy, Debug)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `RingMessage` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/compile_fail/persistent_message_on_enum.rs:4:23
  |
4 | #[derive(RingMessage, PersistentMessage, Clone, Copy, Debug)]
  |                       ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `PersistentMessage` (in Nightly builds, run with -Z macro-backtrace for more info)
